bug: fix dialog-content height on mobile

--- a/src/components/dialog-content/styles.scss
+++ b/src/components/dialog-content/styles.scss
@@ -99,7 +99,7 @@
 
       @include onMobile {
         padding: 16px;
-        height: 100%;
+        height: calc(100% - 236px);
       }
     }
 
